Mon Dec  9 07:41:39 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* tests/OS_Test.cpp:
	* ace/OS_String.cpp (strsncpy): Fixed a cut and paste error. 
	

Mon Dec  9 00:09:55 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* ace/INET_Addr.cpp (get_host_addr): Changed the usage of strncpy
	  () to strsncpy (). Thanks to Alain Decamps for donating this patch.

Sun Dec  8 23:56:09 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* ace/OS_String.cpp: Applied patches from Alain Decamps to make
	  strsncpy () more robust.  If dst == src, the return string will
	  have utmost 'maxlen'. 
	
	* tests/OS_Test.cpp: Added a test case for strsncpy (). Thanks to
	  Alain Decamps for donating the patch.

Sun Dec 08 22:44:07 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/Functor.h (void *): 
	* ace/Functor.i: Added a template specialization for ACE_Hash <void *>. 

Sun Dec 08 09:45:34 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Map_Manager.h:
        * ace/SString.h:
        * ace/Unbounded_Queue.h:
          Improved doxygen documentation

Sun Dec 08 09:37:12 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/*.doxygen:
          Set JAVADOC_AUTOBRIEF to NO in all doxygen config files. When
          only javadoc style documentation is used, only detailed documentation
          is generated.

Sun Dec 08 01:17:26 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/Event_Handler.cpp: Fixed a typo.

Thu Dec  5 20:30:56 2002  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* ace/Event_Handler.cpp: Updated the implementation of ACE_Event_Handler::read_adapter()
	  so that the code is consistent with the stated semantics.  Thanks to
	  Ron Muck <rlm@sdiusa.com> for the fix.

	* ace/OS_Dirent.inl (readdir_r): Enhanced the ACE_OS_Directn::readdir_r()
	  wrapper facade so that it returns 1 (i.e., "done") when an error