@@ -1,3 +1,9 @@
+Mon Dec  9 15:42:39 UTC 2002  Don Hinton  <dhinton@ieee.org>
+
+	* examples/C++NPv1/Reactive_Logging_Server_Ex.cpp:  Removed
+	  duplicate template specilization for ACE_Hash<ACE_HANDLE> on
+	  Windows that's no longer needed.
+
 Mon Dec  9 07:41:39 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>
 
 	* tests/OS_Test.cpp:
